
<package format="3">
  <name>openvdb</name>
  <version>10.0.0</version>
  <description>Wrapper for precompiled openvdb library</description>
  <maintainer email="giuseppe.rizzi@ascento.ch">Giuseppe Rizzi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>